# glm-py

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  custom_nml.nml  custom_sim.glmpy  index.html  mkdocs.yml  multi_sim.py  new-api.ipynb  objects.inv  plot_sim.py  pyproject.toml  requirements.txt  setup.py  si_sim.py
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-deploy.yml  build-and-test-deploy.yml  test-build.yml  test-glmpy.yml
blog/: index.html
blog/archive/2024/: index.html
blog/category/releases/: index.html
blog/category/tutorials/: index.html
contributing/: index.html
css/: extra.css
data/: dam_tutorial_met_data.csv  sparkling_lake.json
development/: index.html
dimensions/: index.html
docs/: development.md  dimensions.md  farm-dam-tutorial.md  flows.md  index.md  inflows.md  installation.md  json-to-nml.md  nml.md  outflows.md  plots.md  simulation.md  sparkling.md
docs/blog/: authors.yml  index.md
docs/contributing/: index.md
docs/css/: extra.css
docs/custom_theme/: main.html
docs/how_to/: how-to-dimensions.md  how-to-flows.md  how-to-glm_json.md  how-to-inflows.md  how-to-nml.md  how-to-outflows.md  how-to-plots.md  how-to-simulation.md
docs/release_notes/: index.md
docs/tutorials/: authors.yml
farm-dam-tutorial/: index.html
flows/: index.html
glmpy/: __init__.py  _version.py  dimensions.py  example_sims.py  flows.py  functional.py  glm_json.py  glmpy.c  inflows.py  nml.py  outflows.py  plots.py  sensitivity.py  sim.py  simulation.py
glmpy/example_sims/: sparkling.py
glmpy/example_sims_depr/: sparkling.py
glmpy/nml/: __init__.py  aed_nml.py  glm_nml.py  new_glm_nml.py  nml.py
how_to/how-to-dimensions/: index.html
how_to/how-to-flows/: index.html
how_to/how-to-glm_json/: index.html
how_to/how-to-inflows/: index.html
how_to/how-to-nml/: index.html
how_to/how-to-outflows/: index.html
how_to/how-to-plots/: index.html
how_to/how-to-simulation/: index.html
inflows/: index.html
installation/: index.html
json-to-nml/: index.html
nml/: index.html
notebooks/: sparkling-lake-tutorial.ipynb
notebooks/glmpy-demo/: glm3.nml  glm3_from_json.nml  glmpy_demo.ipynb  run_glmpy.py
outflows/: index.html
plots/: index.html
release_notes/: index.html
scripts/: format.sh
search/: search_index.json
simulation/: index.html
sparkling/: glm3.nml  index.html
sparkling/bcs/: nldas_driver.csv
sparkling/output/: WQ_17.csv  overflow.csv
tests/: conftest.py  example_sims.py  gh_actions_multi_sim.py  gh_actions_single_sim.py  simulation.py  test_dep_nml.py  test_dimensions.py  test_example_sims.py  test_inflows.py  test_json.py  test_nml.py  test_nml_basic.py  test_nml_old.py  test_outflows.py
tests/test-data/: glm3.nml  met.csv  test-nmlreader.nml
tutorials/: index.html
(+37 files in other folders)
